crates/solidity/testing/snapshots/bindings_output/expressions/elementary_casting/generated/0.4.21-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or EmitKeyword or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or ThrowKeyword or TrueKeyword or UfixedKeyword or UintKeyword or VarKeyword or WhileKeyword.
   ╭─[ input.sol:6:9 ]
   │
 6 │ ╭─▶         payable(a).call("");
   ┆ ┆   
 8 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
    │ 
  4 │     function test(address a) public {
    │              ──┬─         ┬  
    │                ╰───────────── name: 2
    │                           │  
    │                           ╰── name: 3
    │ 
 11 │ library Lib {
    │         ─┬─  
    │          ╰─── name: 4
 12 │     function noop(uint x) public returns (uint) {}
    │              ──┬─      ┬  
    │                ╰────────── name: 5
    │                        │  
    │                        ╰── name: 6
    │
    ├─[ input.sol:1:1 ]
    │
  2 │     using Lib for uint;
    │           ─┬─  
    │            ╰─── ref: 4
    │ 
  5 │         address(this).balance;
    │                       ───┬───  
    │                          ╰───── ref: built-in
────╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ ╭─▶ contract Test {
    ┆ ┆   
  9 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  3 │ ╭─▶ 
    ┆ ┆   
  8 │ ├─▶     }
    │ │           
    │ ╰─────────── definiens: 2
    │
    ├─[ input.sol:1:1 ]
    │
  4 │         function test(address a) public {
    │                       ────┬────  
    │                           ╰────── definiens: 3
    │ 
 10 │ ╭─▶ 
    ┆ ┆   
 13 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 4
    │
    ├─[ input.sol:1:1 ]
    │
 12 │     function noop(uint x) public returns (uint) {}
    │ ─────────────────────┬───┬─────────────────────────  
    │                      ╰─────────────────────────────── definiens: 6
    │                          │                           
    │                          ╰─────────────────────────── definiens: 5
────╯
